--- a/index.html
+++ b/index.html
@@ -10,28 +10,47 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </head>
 <body>
+	<!--Navigation Bar-->
+	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+		<ul class="navbar-nav">
+			<li class="nav-item active">
+				<a class="navbar-brand" href="#">Operations</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Reduction</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Addition</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Multiplication</a>
+			</li>
+		</ul>
+	</nav>
 	
+	<!--Middle Text-->
 	<div class="jumbotron text-center">
-		<h1>My First Bootstrap Page</h1>
-		<p>Resize this responsive page to see the effect!</p>
+		<h1>All kinds of Matrix Operations</h1>
+		<p>Row reducing matrices! Adding or subtracting matrices! Multiplying matrices!</p>
+		<p>All kinds of matrix operations at your service :)</p>
 	</div>
 	
+	<!--Bottom texts-->
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-4">
-				<h3>Column 1</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+				<h3>Reduce</h3>
+				<p>A matrix reducer</p>
+				<p>This calculator will help you reduce matrices to its reduced-row-echelon form</p>
+				<p href="#">Click here to begin reducing!</p>
 			</div>
 			<div class="col-sm-4">
-				<h3>Column 2</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+				<h3>Addition/Subtraction</h3>
+				<p>Coming soon!</p>
 			</div>
 			<div class="col-sm-4">
-				<h3>Column 3</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+				<h3>Multiplication</h3>
+				<p>Coming soon!</p>
 			</div>
 		</div>
 	</div>
