Removed bootstrap libraries

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 				<a class="navbar-brand" href="#">Operations</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Reduction</a>
+				<a class="nav-link" href="reduce/reduce.html">Reduction</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Addition</a>
+				<a class="nav-link" href="addition/addition.html">Addition</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Multiplication</a>
+				<a class="nav-link" href="multiply/multiply.html">Multiplication</a>
 			</li>
 		</ul>
 	</nav>
@@ -42,15 +42,15 @@
 				<h3>Reduce</h3>
 				<p>A matrix reducer</p>
 				<p>This calculator will help you reduce matrices to its reduced-row-echelon form</p>
-				<p href="#">Click here to begin reducing!</p>
+				<p><a href="reduce/reduce.html">Click here to begin reducing!</a></p>
 			</div>
 			<div class="col-sm-4">
-				<h3>Addition/Subtraction</h3>
-				<p>Coming soon!</p>
+				<h3>Addition</h3>
+				<p><a href="addition/addition.html">Click here to begin adding!</a></p>
 			</div>
 			<div class="col-sm-4">
 				<h3>Multiplication</h3>
-				<p>Coming soon!</p>
+				<p><a href="multiply/multiply.html">Click here to begin multiplying!</a></p>
 			</div>
 		</div>
 	</div>
