--- a/addition/addition.html
+++ b/addition/addition.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Bootstrap Example</title>
+	<title>Matrix Operations</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--Bootstrap styling-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+	<!--Extra styling-->
+	<link rel="stylesheet" href="../css/general.css">
 </head>
 <body>
 	<!--Navigation Bar-->
@@ -27,5 +30,10 @@
 			</li>
 		</ul>
 	</nav>
+	
+	<!--Main-->
+	<br>
+	< class="text-center">Please select your matrix size:</>
+	
 </body>
 </html>
