--- a/addition/index.html
+++ b/addition/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<title>Matrix Operations</title>
+	<!--Tab Icon-->
+	<link rel="icon" href="../res/M.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--Bootstrap styling-->
@@ -13,22 +15,23 @@
 	<link rel="stylesheet" href="../css/general.css">
 	<!--JavaScript-->
 	<script src="js/select.js"></script>
+	<script src="js/solve.js"></script>
 </head>
 <body>
 	<!--Navigation Bar-->
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 		<ul class="navbar-nav">
 			<li class="nav-item">
-				<a class="navbar-brand" href="../index.html">Operations</a>
+				<a class="navbar-brand" href="../">Operations</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="../reduce/reduce.html">Reduction</a>
+				<a class="nav-link" href="../reduce/">Reduction</a>
 			</li>
 			<li class="nav-item active">
 				<a class="nav-link" href="#">Addition</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="../multiply/multiply.html">Multiplication</a>
+				<a class="nav-link" href="../multiply/">Multiplication</a>
 			</li>
 		</ul>
 	</nav>
@@ -37,7 +40,7 @@
 	<h3 class="text-center">Please select your matrix size:</h3>
 	<br>
 	<!--Select-->
-	<div class="field">
+	<div class="field" id ="topPart">
 		<form>
 			<span>Dimensions: </span>
 			<select name="row" id="rowID">
@@ -153,10 +156,10 @@
 		</form>
 	</div>
 	<!--Matrix table-->
-	<div class="field">
+	<div class="field" id="bottomPart">
 		<h3 id="enter"></h3>
 		<br>
-		<form action="php/additionMatrix.php" id="matrixTable" method="post">
+		<form id="matrixTable">
 		
 		</form>
 	</div>
