--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
 	<title>Matrix Operations</title>
+	<!--Tab Icon-->
+	<link rel="icon" href="res/M.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<!--Bootstrap scripts-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -17,13 +21,13 @@
 				<a class="navbar-brand" href="#">Operations</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="reduce/reduce.html">Reduction</a>
+				<a class="nav-link" href="reduce/">Reduction</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="addition/addition.html">Addition</a>
+				<a class="nav-link" href="addition/">Addition</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="multiply/multiply.html">Multiplication</a>
+				<a class="nav-link" href="multiply/">Multiplication</a>
 			</li>
 		</ul>
 	</nav>
@@ -42,15 +46,15 @@
 				<h3>Reduce</h3>
 				<p>A matrix reducer</p>
 				<p>This calculator will help you reduce matrices to its reduced-row-echelon form</p>
-				<p><a href="reduce/reduce.html">Click here to begin reducing!</a></p>
+				<p><a href="reduce/index.html">Click here to begin reducing!</a></p>
 			</div>
 			<div class="col-sm-4">
 				<h3>Addition</h3>
-				<p><a href="addition/addition.html">Click here to begin adding!</a></p>
+				<p><a href="addition/index.html">Click here to begin adding!</a></p>
 			</div>
 			<div class="col-sm-4">
 				<h3>Multiplication</h3>
-				<p><a href="multiply/multiply.html">Click here to begin multiplying!</a></p>
+				<p><a href="multiply/index.html">Click here to begin multiplying!</a></p>
 			</div>
 		</div>
 	</div>
