--- a/multiply/index.html
+++ b/multiply/index.html
@@ -2,32 +2,33 @@
 <html lang="en">
 <head>
 	<title>Matrix Operations</title>
+	<!--Tab Icon-->
+	<link rel="icon" href="../res/M.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--Bootstrap styling-->
+	<!--Bootstrap Styling-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </head>
 <body>
-	
-</body>
-<!--Navigation Bar-->
+	<!--Navigation Bar-->
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 		<ul class="navbar-nav">
 			<li class="nav-item">
-				<a class="navbar-brand" href="../index.html">Operations</a>
+				<a class="navbar-brand" href="../">Operations</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="../reduce/">Reduction</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="../addition/">Addition</a>
 			</li>
 			<li class="nav-item active">
-				<a class="nav-link" href="#">Reduction</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="../addition/addition.html">Addition</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="../multiply/multiply.html">Multiplication</a>
+				<a class="nav-link" href="#">Multiplication</a>
 			</li>
 		</ul>
 	</nav>
+</body>
 </html>
